[package]
name = "sento-api"
version = "0.1.0"
authors = ["Roberto García Calero <garcalrob@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/robgc/sento-api-rs"
publish = false

[dependencies]
actix-web = "1.0.8"
futures = "~0.1.29"
serde = "~1.0.102"
log = "~0.4.8"
env_logger = "~0.7.1"
config = "~0.9.3"
# Careful! Check that the versions of postgres and serde_json crates match
# with the ones used in the r2d2_postgres and postgres crates respectivelly
r2d2_postgres = "~0.16.0"
postgres = { version = "~0.17.0", features = ["with-serde_json-1"] }
serde_json = "~1.0.0"
failure = "~0.1.6"
