[package]
name = "sento-api"
version = "0.2.0"
authors = ["Roberto García Calero <garcalrob@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/robgc/sento-api-rs"
publish = false

[dependencies]
actix-web = "~2.0.0"
actix-rt = "~1.1.0"
actix-cors = "~0.2.0"
futures = "~0.1.29"
serde = "~1.0.102"
log = "~0.4.8"
env_logger = "~0.7.1"
config = "~0.9.3"
# Careful! Check that the versions of postgres and serde_json crates match
# with the ones used in the r2d2_postgres and postgres crates respectivelly
bb8-postgres = "~0.4.0"
tokio-postgres = { version = "~0.5.0", features = ["with-serde_json-1"] }
serde_json = "~1.0.0"
failure = "~0.1.6"
